@@ -1,36 +1,0 @@
-<@6>
-<@local(ps)>
-<$ps=argv#0>
-
-	<table class="blog-setting">
-	<tbody>
-	<tr>
-		<th>認証状態</th>
-		<td>
-			<strong><@ps.screen_name></strong> で認証されています。
-			<input type="checkbox" name="re_auth" value="1"><label>再認証する</label>
-		</td>
-	</tr>
-	<tr>
-		<th>記事の通知</th>
-		<td>
-			<input type="checkbox" name="ping" value="1"<@if(ps.ping, ' checked')>>
-			<label>新着記事をTwitterに通知する</label>
-		</td>
-	</tr>
-	<tr>
-		<th>ツイート内容</th>
-		<td>
-			<textarea name="ping_txt" id="ping-txt" class="w400" rows="3"><@esc(ps.ping_txt)></textarea>
-			<button type="button" id="txt-reset">初期値に戻す</button>
-			%t：記事タイトル、%n：ブログ名、%u：記事URL
-		</td>
-	</tr>
-	</table>
-
-<!-- JavaScript ==========================================================-->
-<script>
-$('#txt-reset').click( function(){
-	$('#ping-txt').val('ブログ更新「%t」 %u');
-});
-</script>
