@@ -38,6 +38,7 @@
 -【plugin】プラグインイベントに #before/#after 修飾が追加されました。
 -【plugin】ヘッダ検索ボックスを簡素にしました。
 -【plugin】コンテンツリスト、タグリストプラグインで、階層スイッチを標準で閉じられるようにしました。
+-【plugin】TwitterのOauth認証でPINコードを手動入力する必要がなくなりました。
 -【テーマ】テーマのオプションにデフォルト値を許可しました。
 -【テーマ】rgba(255,255,255,0.7) などの形式の色カスタマイズに対応しました。
 -【fix/テーマ】cuteテーマでサイドバー要素をクリックできない。
